[package]
name = "test-blox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
dotenv = "0.15.0"
dotenvy = "0.15.7"
ethers = "2.0.14"
futures = "0.3.31"
hex = "0.4.3"
reqwest = { version = "0.12.24", features = ["json", "multipart", "blocking", "rustls-tls"] }
serde = "1.0.228"
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["full"] }
